# Vulkan-Game-Engine

./: .gitignore  CMakeLists.txt  README.md
Android/app/: build.gradle
Android/app/src/androidTest/java/com/noxcain/game/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/test/java/com/noxcain/game/: ExampleUnitTest.java
Android/gradle/wrapper/: gradle-wrapper.properties
build-data/shaders/: configure_shader.in  deferred_geometry.frag  deferred_geometry.vert  edge_detection.frag  finalize.frag  full_screen.vert  glyph_contour_2D.frag  glyph_contour_3D.frag  glyph_quad_2D.vert  glyph_quad_3D.vert  label.frag  label.vert  multi_shading.frag  normal.frag  normal.vert  shading.include  single_shading.frag
font-engine/: CMakeLists.txt  FontEngine.cpp  FontEngine.hpp  main.cpp
vulkan-game-engine/: CMakeLists.txt  Defines.hpp  PresentationSurface.hpp  ResourceFile.hpp  Version.hpp  main.cpp
vulkan-game-engine/android/: AndroidSurface.cpp  AndroidSurface.hpp  CMakeLists.txt
vulkan-game-engine/logic/: CMakeLists.txt  DebugLevel.cpp  DebugLevel.hpp  GameLogicEngine.cpp  GameLogicEngine.hpp  GeometryLogic.cpp  GeometryLogic.hpp  InputEventHandler.cpp  InputEventHandler.hpp  Level.cpp  Level.hpp  Quad2D.cpp  Quad2D.hpp  Region.cpp  Region.hpp  RegionEventReceiver.cpp  RegionEventReceiver.hpp  Renderable.hpp  SceneGraph.cpp  SceneGraph.hpp  TreeNode.hpp  UserInterface.cpp  UserInterface.hpp  VectorText.cpp  VectorText.hpp  VectorText2D.cpp  VectorText2D.hpp  VectorText3D.cpp  VectorText3D.hpp
vulkan-game-engine/logic/gui/: Button.cpp  Button.hpp  CMakeLists.txt  Label.cpp  Label.hpp  ScrollBar.cpp  ScrollBar.hpp
vulkan-game-engine/logic/level/: CMakeLists.txt  HexField.cpp  HexField.hpp  MineSweeperLevel.cpp  MineSweeperLevel.hpp
vulkan-game-engine/math/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  Quaternion.cpp  Quaternion.hpp  Spline.cpp  Spline.hpp  Vector.cpp  Vector.hpp
vulkan-game-engine/renderer/: CMakeLists.txt  CommandManager.cpp  CommandManager.hpp  CommandSubmit.cpp  CommandSubmit.hpp  CommandSubpassTask.hpp  CommandTaskGeometry.cpp  CommandTaskOverlay.cpp  CommandTaskSampling.cpp  CommandTaskVectorDecal.cpp  CommandTasks.hpp  CommandThreadTools.hpp  DescriptorSetDescription.cpp  DescriptorSetDescription.hpp  DescriptorSetManager.cpp  DescriptorSetManager.hpp  GameGraphicEngine.cpp  GameGraphicEngine.hpp  GraphicCore.cpp  GraphicCore.hpp  GraphicEngineConstants.hpp  MemoryManagement.cpp  MemoryManagement.hpp  RenderPassDescription.cpp  RenderPassDescription.hpp  RenderQuery.cpp  RenderQuery.hpp  ShaderManager.cpp  ShaderManager.hpp
vulkan-game-engine/resources/: BoundingBox.cpp  BoundingBox.hpp  CMakeLists.txt  FontEngine.cpp  FontEngine.hpp  FontResource.cpp  FontResource.hpp  GameResource.cpp  GameResource.hpp  GameResourceEngine.cpp  GameResourceEngine.hpp  GeometryResource.cpp  GeometryResource.hpp  ResourceTools.cpp  ResourceTools.hpp
vulkan-game-engine/shader/: CMakeLists.txt  create_shader.cmake
vulkan-game-engine/tools/: CMakeLists.txt  ResultHandler.hpp  TimeFrame.cpp  TimeFrame.hpp
vulkan-game-engine/windows/: CmakeLists.txt  Windows.cpp  Windows.hpp
